--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,17 @@
 page-home {
 
+h3{
+  margin-top: 16px;
+  text-align: center;
+}
+
+img{
+  margin: auto;
+  width: 200px;
+  align-self: center;
+  display: block;
+  padding: 10px;
+}
+
+
 }
